<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/writeAReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/write_a_review"
        android:textSize="@dimen/_24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/rateStars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="24dp"
        android:progressTint="@color/purple"
        android:visibility="visible"
        android:numStars="5"
        android:stepSize="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/writeAReview"
        tools:ignore="MissingConstraints"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/comment_id"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@drawable/comment_background"
        android:textColorHint="@color/purple"
        app:boxStrokeColor="@drawable/comment_stroke_color"
        app:hintTextColor="@color/purple"
        app:layout_constraintTop_toBottomOf="@+id/rateStars">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/writeSomething"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comment"
            app:boxStrokeColor="@drawable/comment_background"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_review_button_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sp"
        android:enabled="false"
        android:text="@string/submit"
        android:backgroundTint="@drawable/hide_show_button"
        app:cornerRadius="50dp"
        app:layout_constraintTop_toBottomOf="@+id/comment_id"
        tools:ignore="MissingConstraints"/>

</androidx.constraintlayout.widget.ConstraintLayout>