<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/showDetailsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.show_details.ShowDetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:collapsedTitleTextColor="@color/black"
            app:contentScrim="@color/white"
            app:expandedTitleTextAppearance="@style/toolbarTitleStyle"
            app:expandedTitleTextColor="@color/black"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="The office">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="98dp"
                android:layout_marginStart="24dp"
                android:textStyle="bold"
                android:textSize="@dimen/_36sp"
                android:textColor="@color/black"
                app:layout_collapseMode="parallax"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_id"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:layout_collapseMode="pin"
                app:navigationIcon="?attr/homeAsUpIndicator"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_details_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:scaleType="centerCrop"
                android:background="@drawable/round_edges"
                android:clipToOutline="true"
                android:adjustViewBounds="true"
                android:src="@drawable/welcome_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/show_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textColor="@color/black"
                android:textSize="@dimen/_17sp"
                android:text="@string/show_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_details_activity"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/reviews"
                android:textStyle="bold"
                android:textSize="@dimen/_24sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/show_desc"/>

            <TextView
                android:id="@+id/average_rating_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="24dp"
                android:textAllCaps="true"
                tools:text="10 Reviews, 7.7 average"/>

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:visibility="visible"
                android:numStars="5"
                android:isIndicator="true"
                android:progressBackgroundTint="@color/grey"
                android:progressTint="@color/purple"
                android:secondaryProgressTint="@color/grey"
                android:stepSize="0.01"/>

            <TextView
                android:id="@+id/no_reviews_yet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="136dp"
                android:visibility="gone"
                android:text="@string/no_reviews_yet"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="93dp"
                tools:listitem="@layout/view_reviews_item"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/write_review_button"
        style="@style/Button.Text.White.Background.Purple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:layout_gravity="bottom"
        android:text="@string/write_a_review"
        app:cornerRadius="18dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:layout_gravity="bottom"
        android:background="@color/white"
        app:layout_anchor="@+id/write_review_button"
        app:layout_anchorGravity="center"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>